Bug 309886 - Creating bookmarks does not work
Summary: Creating bookmarks does not work
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.4 (KDE 4.9)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-11 08:09 UTC by Rolf Eike Beer
Modified: 2012-11-11 18:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE/4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rolf Eike Beer 2012-11-11 08:09:59 UTC
When I try to create a new bookmark the window closes without any error message, but the bookmark does never show up in the list. Older bookmarks that are already in there still work. Creating new folders does work, but new bookmarks in them also silently fails.

I'm running marble 1.4.1 on KDE SC 4.9.3.

Reproducible: Always
Comment 1 Dennis Nienhüser 2012-11-11 17:40:52 UTC
Thanks for the bug report. Seems to be a problem of the KDE version (both master and the KDE/4.9 fail to add bookmarks in the KDE version, the Qt one works fine for both).
Comment 2 Dennis Nienhüser 2012-11-11 18:14:33 UTC
Git commit a84b5638dc6f073570c6189a43effddb9b803040 by Dennis Nienhüser.
Committed on 11/11/2012 at 19:13.
Pushed by nienhueser into branch 'master'.

Fix adding bookmarks (regression from fa70f0c)

M  +4    -1    src/marble_part.cpp

http://commits.kde.org/marble/a84b5638dc6f073570c6189a43effddb9b803040
Comment 3 Dennis Nienhüser 2012-11-11 18:21:39 UTC
Git commit 6b84805e9eb8f3bdd4aaef580fe383c725584e5e by Dennis Nienhüser.
Committed on 11/11/2012 at 19:13.
Pushed by nienhueser into branch 'KDE/4.9'.

Fix adding bookmarks (regression from fa70f0c)
FIXED-IN: KDE/4.9.4
(cherry picked from commit a84b5638dc6f073570c6189a43effddb9b803040)

M  +4    -1    src/marble_part.cpp

http://commits.kde.org/marble/6b84805e9eb8f3bdd4aaef580fe383c725584e5e