Fix adding bookmarks (regression from fa70f0c)

BUG: 309886
FIXED-IN: KDE/4.9.4
(cherry picked from commit a84b5638dc6f073570c6189a43effddb9b803040)