src/marble_part.cpp
@@ -1712,7 +1712,10 @@ void MarblePart::openEditBookmarkDialog()
     dialog->setCoordinates( widget->lookAt().coordinates() );
     dialog->setRange( widget->lookAt().range() );
     dialog->setMarbleWidget( widget );
-    dialog->exec();
+    dialog->setReverseGeocodeName();
+    if ( dialog->exec() == QDialog::Accepted ) {
+        widget->model()->bookmarkManager()->addBookmark( dialog->folder(), dialog->bookmark() );
+    }
     delete dialog;
 }
 
